# funnel

./: .gitignore  .staging-validated  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.md  COPYRIGHT.txt  DartConfiguration.tcl  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements.txt.save  setup.py
.github/workflows/: cmake.yml  master-release.yml  staging-release.yml
funnel/: __init__.py  pyfunnel.py
funnel/lib/win64/: funnel.lib
lib/darwin64/: libfunnel.dylib
lib/win64/: funnel.lib
pyfunnel/: __init__.py  cli.py  config.py  core.py  pyfunnel.py
pyfunnel/lib/darwin64/: libfunnel.dylib
pyfunnel/lib/win64/: funnel.lib
pyfunnel/templates/: plot.html
sources/: .cproject  .project  Makefile  data_structure.h  main.c  readCSV.c  trended.csv  tube.c  tubeSize.c  tubeSize.h
sources/results/: processData.py
src/: .gitignore  CMakeLists.txt  Makefile  algorithmRectangle.c  algorithmRectangle.h  commons.c  commons.h  compare.c  compare.h  data_structure.h  main.c  mkdir_p.c  readCSV.c  readCSV.h  tube.c  tube.h  tubeSize.c  tubeSize.h
tests/: CMakeLists.txt  Makefile  makePlot.py  pythonAPI.py  readme.txt  temp-plot.html  test_import.py  test_lib.c  test_numerics.py  test_plot.py  test_summary.py
tests/ambiguous2/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/ambiguous2/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/fail1/: param.json  simulated.csv  trended.csv
tests/fail1/results/: lowerData.csv  refData.csv  report.csv  testData.csv  upperData.csv
tests/fail2/: readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/fail2/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/fail3/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/fail3/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/fail4/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/fail4/results/: errors.csv  test.csv
tests/fail5/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/fail5/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/fail6/: param.json  readme.txt
tests/fail6/results/: lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/should_fail1/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/should_fail1/results/: lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/should_fail2/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/should_fail2/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/should_fail3/: simulated.csv  temp-plot.html  trended.csv
tests/should_fail3/results/: errors.csv
tests/should_fail4/: readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/should_fail4/results/: errors.csv  test.csv
tests/should_succeed1/: param.json  readme.txt  simulated.csv  trended.csv
tests/should_succeed1/results/: errors.csv  lowerBound.csv  reference.csv  test.csv
tests/should_succeed2/: param.json  temp-plot.html
tests/should_succeed2/results/: upperBound.csv
tests/success1/: simulated.csv  trended.csv
tests/success1/results/: lowerData.csv  refData.csv  report.csv  upperData.csv
tests/success10/: param.json  readme.txt
tests/success10/results/: errors.csv  lowerBound.csv  test.csv  upperBound.csv
tests/success2/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/success2/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/success3/: param.json  readme.txt  simulated.csv  temp-plot.html  trended.csv
tests/success3/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/success4/: param.json  readme.txt  simulated.csv  temp-plot.html
tests/success4/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/success5/: param.json  temp-plot.html
tests/success5/results/: errors.csv  lowerBound.csv  test.csv  upperBound.csv
tests/success6/: param.json  readme.txt  simulated.csv  trended.csv
tests/success6/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/success7/: param.json  readme.txt  reference.csv
tests/success7/results/: errors.csv  lowerBound.csv  test.csv  upperBound.csv
tests/success8/: param.json  readme.txt  simulated.csv  trended.csv
tests/success8/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/success9/: param.json  readme.txt
tests/success9/results/: errors.csv  lowerBound.csv  test.csv  upperBound.csv
tests/testPython/: errors.csv  lowerBound.csv  lowerData.csv  refData.csv  report.csv  testData.csv  upperBound.csv  upperData.csv
tests/testPython/should_fail4/: temp-plot.html
tests/testPython/should_fail4/results/: errors.csv  lowerBound.csv  reference.csv  test.csv  upperBound.csv
tests/test_bin/results/: errors.csv  lowerBound.csv  reference.csv  upperBound.csv
